# btc_embedded

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  upload_to_pip.ps1  upload_to_pip.sh
.agent/skills/btc-ep-test-automation/: SKILL.md  manifest.yaml
.agent/skills/btc-ep-test-automation/references/docs/: api-changelog.md  docker-ci.md  logging.md  migration-testing.md  troubleshooting.md
.agent/skills/btc-ep-test-automation/references/examples/: ccode_rbt.py  embeddedcoder_rbt_b2b.py  formal_test_new_profile.py  formal_test_verification_existing_profile.py  formal_verification_new_profile.py  migration_suite_ccode.py  migration_suite_mbd.py  migration_test_ccode.py  migration_test_mbd.py  (+2 more)
.github/workflows/: deploy.yml  pipeline.yml
btc_embedded/: README.md  __init__.py  api.py  api_wrapper.py  btc_config.yml  config.py  helpers.py  migration.py  portRegistry.py  reporting.py  util.py
btc_embedded/resources/: btc_config.yml  btc_config_linux.yml  btc_summary_report.template
btc_embedded/resources/projectreport_templates/: b2b-only-ec.xml  b2b-only-tl.xml  rbt-b2b-ec.xml  rbt-b2b-tl.xml  rbt-ec.xml  rbt-sil-only.xml  rbt-tl.xml  regression-test-ec.xml  regression-test-sil-only.xml  regression-test-tl.xml
docs/docker/: README.md
llm-hook-sdk/: README.md  pyproject.toml
llm-hook-sdk/examples/: aws_bedrock_hook.py  requirements.txt
llm-hook-sdk/src/llm_hook_sdk/: __init__.py  base.py  types.py
test/: Dockerfile  addMLIntegration.bash  btc_config.yml  test.epp  test.py  testLogging.py  test_logging.py
test/model/: init.m
test/testcases/: CondCheck.tc.json  Stage1_LEDFeedback.tc.json  Stage1_Request.tc.json  Stage1_TempValue.tc.json  Stage2_LEDFeedback.tc.json  Stage2_Request.tc.json  Stage2_TempValue.tc.json  Stage3_Request.tc.json  Stage3_TempValue.tc.json  TurnOff_Request.tc.json
(+56 files in other folders)
