[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]

name = "btc_embedded"
authors = [
    {name = "Thabo Krick", email = "thabo.krick@btc-embedded.com"},
    {name = "Nathan Drasovean", email = "nathan.drasovean@btc-embedded.com"},
    {name = "Ferdinand Becker", email = "ferdinand.becker@btc-embedded.com"},
]

version = "25.3.2"

license = "MIT"
description="API wrapper for BTC EmbeddedPlatform REST API"

dependencies = [
    "requests",
    "pyyaml",
]

readme = "README.md"

classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Topic :: Software Development :: Testing',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
    ]
[project.urls]
Homepage = "https://github.com/btc-embedded/btc_embedded"

[tool.setuptools]
packages=["btc_embedded"]
