[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-hook-sdk"
version = "1.0.0"
description = "SDK for implementing LLM provider hooks"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
bedrock = ["boto3>=1.34"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_hook_sdk"]

[tool.setuptools.package-data]
llm_hook_sdk = ["*.pyi", "py.typed"]
